--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
        </div>   
 </div></div>
 </ul>
-<footer><em><a href="https://github.com/lasa1828/week6">Open-source code,</a>by Laura Samperisi</em></footer>
+<footer><em><a href="https://github.com/lasa1828/weather-app">Open-source code,</a>by Laura Samperisi</em></footer>
 </div>
 <script src="src/index.js"></script>
   </body>
